Fix : Characters typed in user search in user management section are not visible [SDESK-6789] (#4195)

--- a/styles/sass/sf-additional.scss
+++ b/styles/sass/sf-additional.scss
@@ -217,6 +217,8 @@
             transition: all 0.3s ease;
             &:focus {
                 box-shadow: none;
+                width: auto;
+
             }
             &::placeholder {
                 color: $sd-text-light;
